--- a/styles.css
+++ b/styles.css
@@ -9,10 +9,24 @@
 }
 body{
     margin: 0px,
+    font-family:"Roboto", sans-serif;
 }
 header{
     font-family: "shrikhand", cursive;
     text-align: center;
     box-shadow: 0 0 0.5rem rgb(0 0 0/25%);
     padding: 0.3rem;
+    position: relative;
+}
+main .city{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    background-color: #F3F3F3;
+    text-align: center;
+    padding: 0.5rem;
+}
+main .city i{
+    font-size: 1.5rem;
 }
