--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,8 @@
     box-sizing: border-box;
 }
 body{
-    margin: 0px,
-    font-family:"Roboto", sans-serif;
+    margin: 0px;
+    font-family: "Roboto", sans-serif;
 }
 header{
     font-family: "shrikhand", cursive;
@@ -30,3 +30,30 @@ main .city{
 main .city i{
     font-size: 1.5rem;
 }
+/* explore*/
+.explore{
+    text-align: center;
+}
+.explore h2{
+    margin-top: 2rem;
+    font-size: 2rem;
+}
+.explore p{
+    font-size: 1rem;
+}
+.explore button{
+    background-image: linear-gradient(to top, rgba(147,86,220,0.9), rgba(255,121,218, 0.9) );
+    color: white;
+    font-weight: 300;
+    font-style: 1.5rem;
+    padding: 1rem 2rem;
+    border: none;
+    border-radius: 2rem;
+    box-shadow: 2px 1px 10px -3px #000000;
+    transition: all 200ms;
+    margin-top: 1rem;
+}
+.explore button:hover{
+        transform: scale(1.02);
+        opacity: 0.9;
+    }
