--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body{
 header{
     font-family: "shrikhand", cursive;
     text-align: center;
-    box-shadow: 0 0 0.5rem rgb(0 0 0/25%);
+    box-shadow: 0 0 0.5rem rgb(0 0 0.25%);
     padding: 0.3rem;
     position: relative;
 }
