--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,10 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
+main {
+  padding: 1rem;
+}
+
 header {
   font-family: "shrikhand", cursive;
   text-align: center;
@@ -21,7 +25,7 @@ header {
   position: relative;
 }
 
-main .city {
+.city {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -37,11 +41,10 @@ main .city {
   padding: 0.5rem;
 }
 
-main .city i {
+.city i {
   font-size: 1.5rem;
 }
 
-/* explore*/
 .explore {
   text-align: center;
 }
@@ -64,16 +67,46 @@ main .city i {
   padding: 1rem 2rem;
   border: none;
   border-radius: 2rem;
-  -webkit-box-shadow: 2px 1px 10px -3px #000000;
-          box-shadow: 2px 1px 10px -3px #000000;
   -webkit-transition: all 200ms;
   transition: all 200ms;
   margin-top: 1rem;
+  -webkit-box-shadow: 2px 1px 10px -3px #000000;
+          box-shadow: 2px 1px 10px -3px #000000;
 }
 
 .explore button:hover {
   -webkit-transform: scale(1.02);
           transform: scale(1.02);
   opacity: 0.9;
+}
+
+.tuto ol {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 1rem;
+}
+
+@media (max-width: 767px) {
+  .tuto ol {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: columns;
+            flex-direction: columns;
+  }
+}
+
+.tuto li {
+  background-color: #f6f6f6;
+  padding: 1rem 2rem;
+  border: 1px solid red;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  border-radius: 1rem;
+  -webkit-box-shadow: 2px 1px 10px -3px #000000;
+          box-shadow: 2px 1px 10px -3px #000000;
 }
 /*# sourceMappingURL=styles.css.map */
