--- a/styles.css
+++ b/styles.css
@@ -1,117 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&family=Shrikhand&display=swap");
-*,
-::before,
-::after {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-body {
-  margin: 0px;
-  font-family: "Roboto", sans-serif;
-}
-
-main {
-  padding: 1rem;
-}
-
-header {
-  font-family: "shrikhand", cursive;
-  text-align: center;
-  -webkit-box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.25);
-          box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.25);
-  padding: 0.3rem;
-  position: relative;
-}
-
-.city {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  gap: 1rem;
-  background-color: #F3F3F3;
-  text-align: center;
-  padding: 0.5rem;
-}
-
-.city i {
-  font-size: 1.5rem;
-}
-
-.explore {
-  text-align: center;
-}
-
-.explore h2 {
-  margin-top: 2rem;
-  font-size: 2rem;
-}
-
-.explore p {
-  font-size: 1rem;
-}
-
-.explore button {
-  background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(147, 86, 220, 0.9)), to(rgba(255, 121, 218, 0.9)));
-  background-image: linear-gradient(to top, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
-  color: white;
-  font-weight: 300;
-  font-style: 1.5rem;
-  padding: 1rem 2rem;
-  border: none;
-  border-radius: 2rem;
-  -webkit-transition: all 200ms;
-  transition: all 200ms;
-  margin-top: 1rem;
-  -webkit-box-shadow: 2px 1px 10px -3px #000000;
-          box-shadow: 2px 1px 10px -3px #000000;
-}
-
-.explore button:hover {
-  -webkit-transform: scale(1.02);
-          transform: scale(1.02);
-  opacity: 0.9;
-}
-
-.tuto ol {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  gap: 1rem;
-}
-
-@media (max-width: 800px) {
-  .tuto ol {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: columns;
-            flex-direction: columns;
-  }
-}
-
-.tuto li {
-  background-color: #f6f6f6;
-  padding: 1rem 2rem;
-  border: 1px solid red;
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
-  border-radius: 1rem;
-  -webkit-box-shadow: 2px 1px 10px -3px #000000;
-          box-shadow: 2px 1px 10px -3px #000000;
-}
-
-.tuto li:hover {
-  -webkit-transform: scale(1.02);
-          transform: scale(1.02);
-}
+@use './sass/base';
+@use './sass/layout/header';
+@use './sass/layout/city';
+@use './sass/layout/explore';
+@use './sass/layout/tuto';
+@use './sass/utils/box-shadow';
+@use './sass/utils/zoom';
 /*# sourceMappingURL=styles.css.map */
