--- a/styles.scss
+++ b/styles.scss
@@ -1,7 +1,7 @@
-@use "./sass/base.scss";
-@use "./sass/layout/header.scss";
-@use "./sass/layout/city.scss";
-@use "./sass/layout/explore.scss";
-@use "./sass/layout/tuto.scss";
-@use "./sass/utils/box-shadow.scss";
-@use "./sass/utils/zoom.scss";
+@use './sass/base' ;
+@use './sass/layout/header' ;
+@use './sass/layout/city' ;
+@use './sass/layout/explore' ;
+@use './sass/layout/tuto' ;
+@use './sass/utils/box-shadow' ;
+@use './sass/utils/zoom' ;
